# transformer_from_scratch

./: .gitignore  README.md  inference.py  pyproject.toml  train.py
configs/: base_config.yaml
src/transformer_basic/: callbacks.py  lit_module.py  tokenizer.py
src/transformer_basic/datamodules/: reverse_string.py
src/transformer_basic/models/: attention.py  decoder.py  encoder.py  transformer.py
